--- a/translation/ru/herb_collector.po
+++ b/translation/ru/herb_collector.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# FULL NAME <EMAIL@ADDRESS>, 2010.
+# FULL NAME <EMAIL@ADDRESS>, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-09-11 23:13+0400\n"
+"PO-Revision-Date: 2011-06-28 22:51+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
@@ -19,11 +19,11 @@ msgstr ""
 
 #: herbalist.xml
 msgid "Herb collector"
-msgstr ""
+msgstr "Сборщик трав"
 
 #: herbalist.xml
 msgid "And another good deed done. I could get used to this."
-msgstr ""
+msgstr "И ещё одно хорошее дельце сделано. Я ведь могу и привыкнуть к такому."
 
 #: herbalist.xml
 msgid ""
@@ -45,39 +45,39 @@ msgstr ""
 
 #: herbalist.xml
 msgid "Here, old women. Your berries."
-msgstr ""
+msgstr "Вот, старуха, ваши ягоды."
 
 #: herbalist.xml
 msgid "Ah, well done, young one."
-msgstr ""
+msgstr "Отличная работа, молодой человек."
 
 #: herbalist.xml
 msgid "Here, let me give you something in return."
-msgstr ""
+msgstr "Пожалуйста, возьми это взамен."
 
 #: herbalist.xml
 msgid "I need more berries, if I am to do something useful with them."
-msgstr ""
+msgstr "Чтобы сделать что-нибудь полезное, мне нужно больше ягод."
 
 #: herbalist.xml
 msgid "Do you want to collect some berries after all?"
-msgstr ""
+msgstr "Ты согласен пособирать ягод?"
 
 #: herbalist.xml
 msgid "Accept Quest?"
-msgstr ""
+msgstr "Принять задание?"
 
 #: herbalist.xml
 msgid "Yes"
-msgstr ""
+msgstr "Да"
 
 #: herbalist.xml
 msgid "No"
-msgstr ""
+msgstr "Нет"
 
 #: herbalist.xml
 msgid "Hey there, young one!"
-msgstr ""
+msgstr "Эй, молодой человек!"
 
 #: herbalist.xml
 msgid "I see you are going to the Northern Meadow."
@@ -85,7 +85,7 @@ msgstr ""
 
 #: herbalist.xml
 msgid "That's right."
-msgstr ""
+msgstr "Все верно."
 
 #: herbalist.xml
 msgid "Quite a trick."
@@ -109,7 +109,7 @@ msgstr ""
 msgid ""
 "With all those goblins about an old woman can't even set a foot out of the "
 "village."
-msgstr ""
+msgstr "Из-за этих гоблинов старуха не может даже и шагу ступить из деревни."
 
 #: herbalist.xml
 msgid "Plants are not really my forte..."
@@ -121,7 +121,7 @@ msgstr ""
 
 #: herbalist.xml
 msgid "It's not like I want you to collect something exotic, you know."
-msgstr ""
+msgstr "Как бы я не прошу собирать тебя что-то необычное."
 
 #: herbalist.xml
 msgid "Just rilfberries."
@@ -129,15 +129,15 @@ msgstr ""
 
 #: herbalist.xml
 msgid "Look for big bushes with fancy red fruits."
-msgstr ""
+msgstr "Ищи большие кусты с красивыми красными плодами."
 
 #: herbalist.xml
 msgid "You will find them for sure."
-msgstr ""
+msgstr "Ты их обязательно увидишь."
 
 #: herbalist.xml
 msgid "I need the berries of at least ten bushes."
-msgstr ""
+msgstr "Мне нужны ягоды как минимум с десяти кустов."
 
 #: herbalist.xml
 msgid "But only the red berries."
@@ -145,15 +145,15 @@ msgstr ""
 
 #: herbalist.xml
 msgid "The rest is of no use at all."
-msgstr ""
+msgstr "Все остальные не подойдут."
 
 #: herbalist.xml
 msgid "Very well, if I find some, I'll bring them."
-msgstr ""
+msgstr "Хорошо, если я их найду, то принесу тебе."
 
 #: herbalist.xml
 msgid "Very well, if we find some, we'll bring them."
-msgstr ""
+msgstr "Хорошо, если мы их найдем, то принесем тебе."
 
 #: herbalist.xml
 msgid "Thanks, sweety."
@@ -175,7 +175,7 @@ msgstr ""
 
 #: herbalist.xml
 msgid "But if you change your mind, I'm not running away from here."
-msgstr ""
+msgstr "Но если ты изменишь свое решение, я буду стоять здесь."
 
 #: herbalist.xml
 msgid "Very well, if I find some, I'll bring them along."
