--- a/translation/ru/maylons_grave.po
+++ b/translation/ru/maylons_grave.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# FULL NAME <EMAIL@ADDRESS>, 2010.
+# FULL NAME <EMAIL@ADDRESS>, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-09-11 23:13+0400\n"
+"PO-Revision-Date: 2011-06-28 21:36+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
@@ -53,15 +53,15 @@ msgstr ""
 
 #: maylons_grave.xml
 msgid "Talk with the goblins?"
-msgstr ""
+msgstr "Поговорить с гоблинами?"
 
 #: maylons_grave.xml
 msgid "Yes"
-msgstr ""
+msgstr "Да"
 
 #: maylons_grave.xml
 msgid "No"
-msgstr ""
+msgstr "Нет"
 
 #: maylons_grave.xml
 msgid "Gab Resh"
@@ -69,11 +69,11 @@ msgstr ""
 
 #: maylons_grave.xml
 msgid "A goblin who wants to talk?"
-msgstr ""
+msgstr "Гоблин, желающий поговорить?"
 
 #: maylons_grave.xml
 msgid "Yes. No hurt, no kill."
-msgstr ""
+msgstr "Да. Никакого насилия, никаких убийств."
 
 #: maylons_grave.xml
 msgid "Gab'Resh and his only harmless rustlers. No bandits."
@@ -81,15 +81,15 @@ msgstr ""
 
 #: maylons_grave.xml
 msgid "You listen, yes?"
-msgstr ""
+msgstr "Ты слушаешь, да?"
 
 #: maylons_grave.xml
 msgid "What will you do?"
-msgstr ""
+msgstr "Твои действия?"
 
 #: maylons_grave.xml
 msgid "Listen to the goblins"
-msgstr ""
+msgstr "Слушать гоблинов"
 
 #: maylons_grave.xml
 msgid "Chase the goblins away"
@@ -101,19 +101,21 @@ msgstr ""
 
 #: maylons_grave.xml
 msgid "What could a goblin possibly have to say?"
-msgstr ""
+msgstr "Что может сказать какой-то гоблин?"
 
 #: maylons_grave.xml
 msgid "We often hide here."
-msgstr ""
+msgstr "Мы часто прячемся здесь."
 
 #: maylons_grave.xml
 msgid "No humans coming, and if do, they never return from depth of cave."
 msgstr ""
+"Люди не ходят сюда, а если и заходят, то никогда не возвращаются из глубин "
+"пещеры."
 
 #: maylons_grave.xml
 msgid "But last moon black human came."
-msgstr ""
+msgstr "Но в прошлое полнолуние пришел черный человек."
 
 #: maylons_grave.xml
 msgid ""
@@ -190,11 +192,11 @@ msgstr ""
 
 #: maylons_grave.xml
 msgid "Thank you very much for liberating my soul."
-msgstr ""
+msgstr "Спасибо большое за освобождение моей души."
 
 #: maylons_grave.xml
 msgid "May you do many other great deeds."
-msgstr ""
+msgstr "Ты можешь сделать ещё много хороших дел."
 
 #: maylons_grave.xml
 msgid "Akerans blessing to you."
@@ -208,11 +210,11 @@ msgstr ""
 msgid ""
 "For a long time now I have no use for it anymore. Choose yourself a weapon "
 "you like."
-msgstr ""
+msgstr "Вот уже долгое время я не использую их. Выбери себе оружие по вкусу."
 
 #: maylons_grave.xml
 msgid "The same holds true for your friends."
-msgstr ""
+msgstr "То же самое относится и к твоим друзьям."
 
 #: maylons_grave.xml
 msgid "But now I have to return into the bliss of Akerans eternal oasis."
@@ -223,4 +225,3 @@ msgid ""
 "I wander if he would have said that if he had known that he will make a "
 "detour to Harad's Hell first?"
 msgstr ""
-
