--- a/authors.txt
+++ b/authors.txt
@@ -43,7 +43,7 @@
 =axander
 =Simeon Dear (Trilby)
 =Patrick McMunn (PaddyMac)
-=Igor Paliychuk (ig0rk0)
+=Igor Paliychuk (igorko)
 
 [J Build system]
 =Stefan Stammberger (fusion44)
